salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>BPP_Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Developer lead - written</fullName>
            </value>
            <value>
                <fullName>Apprentices</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Awaiting Applicant Signoff</fullName>
            </value>
            <value>
                <fullName>Awaiting Information</fullName>
            </value>
            <value>
                <fullName>Bid Team lead - written</fullName>
            </value>
            <value>
                <fullName>Chose Competitor</fullName>
            </value>
            <value>
                <fullName>Commercials</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Final Check In Progress</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Internal (numbers, study method)</fullName>
            </value>
            <value>
                <fullName>Lack of BPP time and resources</fullName>
            </value>
            <value>
                <fullName>Lack of expertise</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Non-apprentices</fullName>
            </value>
            <value>
                <fullName>Non responsive</fullName>
            </value>
            <value>
                <fullName>No training needs</fullName>
            </value>
            <value>
                <fullName>Not required now - future potential</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Organisational Capability Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pre-Approved</fullName>
            </value>
            <value>
                <fullName>Presentation pitch /demo</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>