salesforce-main/src/main/default/objects/Opportunity/fields/BPP_UKVI_Status__c.field-meta.xml
<CustomField>
    <fullName>BPP_UKVI_Status__c</fullName>
    <label>UKVI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>