salesforce-main/src/main/default/objects/Opportunity/fields/BPP_VAT_Exempt__c.field-meta.xml
<CustomField>
    <fullName>BPP_VAT_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only tick this box if we do not charge VAT on the products booked against this opportunity. This may occur where a supplier has subcontracted us to deliver training under an apprenticeship so is exempt from VAT, or for PQ products charged under University. Please speak to your line manager if you are unsure on this.</inlineHelpText>
    <label>VAT Exempt?</label>
    <type>Checkbox</type>
</CustomField>