salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Visa_Copy__c.field-meta.xml
<CustomField>
    <fullName>BPP_Visa_Copy__c</fullName>
    <label>Visa Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>