salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Visa_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_Visa_End_Date__c</fullName>
    <label>Visa End Date</label>
    <type>Date</type>
</CustomField>