salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>BPP_Weighted_Amount__c</fullName>
    <description>&quot;Weighted Amount&quot; is calculated as  &apos;Amount&apos; field multiplied by the &apos;Probability&apos; field.</description>
    <formula>Amount  *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&apos;Amount&apos; field multiplied by the &apos;Probability&apos; field</inlineHelpText>
    <label>Weighted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>