salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Weighted_Students__c.field-meta.xml
<CustomField>
    <fullName>BPP_Weighted_Students__c</fullName>
    <description>&quot;Weighted Students&quot; is calculated as &apos;Number of Students&apos; field multiplied by the probability field.</description>
    <formula>Number_of_Students__c  *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&apos;Number of Students&apos; field multiplied by the &apos;Probability&apos; field.</inlineHelpText>
    <label>Weighted Students</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>