salesforce-main/src/main/default/objects/Opportunity/fields/bringing_dependents__c.field-meta.xml
<CustomField>
    <fullName>bringing_dependents__c</fullName>
    <label>Bringing Dependents</label>
    <length>40</length>
    <type>Text</type>
</CustomField>