salesforce-main/src/main/default/objects/Opportunity/fields/BRP__c.field-meta.xml
<CustomField>
    <fullName>BRP__c</fullName>
    <label>BRP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>