salesforce-main/src/main/default/objects/Opportunity/fields/Bypass_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass_Validation_Rule</label>
    <type>Checkbox</type>
</CustomField>