salesforce-main/src/main/default/objects/Opportunity/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>Date at which the application was cancelled</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>