salesforce-main/src/main/default/objects/Opportunity/fields/CAS_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>CAS_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The CAS-issued letter will be sent along with the CAS PDF if the value is &apos;false&apos; and the value will be updated to &apos;true&apos; after the letter is sent.</description>
    <label>CAS Letter Sent</label>
    <type>Checkbox</type>
</CustomField>