salesforce-main/src/main/default/objects/Opportunity/fields/CAS_Progression_Justification__c.field-meta.xml
<CustomField>
    <fullName>CAS_Progression_Justification__c</fullName>
    <description>The field should be able to be viewed for the Visa Compliance profile.</description>
    <label>CAS Progression Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>