salesforce-main/src/main/default/objects/Opportunity/fields/CAS_status__c.field-meta.xml
<CustomField>
    <fullName>CAS_status__c</fullName>
    <label>CAS status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>IAO Requested</fullName>
            </value>
            <value>
                <fullName>Info Required</fullName>
            </value>
            <value>
                <fullName>Agent Approval Required</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Not Authorised</fullName>
            </value>
            <value>
                <fullName>Ready to Assign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>