salesforce-main/src/main/default/objects/Opportunity/fields/CAS_Visa_Documents__c.field-meta.xml
<CustomField>
    <fullName>CAS_Visa_Documents__c</fullName>
    <description>The following documents must be collected before a CAS can be issued for VISA application.</description>
    <inlineHelpText>The following documents must be collected before a CAS can be issued for VISA application.</inlineHelpText>
    <label>CAS Visa Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passport copy</fullName>
            </value>
            <value>
                <fullName>Education Documents</fullName>
            </value>
            <value>
                <fullName>English Language Certificate</fullName>
            </value>
            <value>
                <fullName>Bank statements</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Acceptance and intention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>