salesforce-main/src/main/default/objects/Opportunity/fields/Certificate_of_Academic_Standing__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Academic_Standing__c</fullName>
    <label>Certificate of Academic Standing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registration_Documents</valueSetName>
    </valueSet>
</CustomField>