salesforce-main/src/main/default/objects/Opportunity/fields/Changed_Course_Instance__c.field-meta.xml
<CustomField>
    <fullName>Changed_Course_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Course Instance provided when the Opportunity was closed.</description>
    <label>Changed Course Instance</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Changed Course Instance)</relationshipLabel>
    <relationshipName>ClosedOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>