salesforce-main/src/main/default/objects/Opportunity/fields/Changed_Professional_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Changed_Professional_Qualification__c</fullName>
    <description>The Professional Qualification provided when the Opportunity was closed.</description>
    <label>Changed Professional Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>