salesforce-main/src/main/default/objects/Opportunity/fields/Changed_Well_Established_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Changed_Well_Established_Opinion__c</fullName>
    <description>BTC - Please provide an example of where you have changed someone’s well-established opinion and how this was achieved? This does not need to be on a legal subject</description>
    <label>Changed Well Established Opinion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>