salesforce-main/src/main/default/objects/Opportunity/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The company account that is associated to the student (Client field) at the time the opportunity is processed. Primarily developed for Application opportunities</description>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select the business account related to the student</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Client)</relationshipLabel>
    <relationshipName>StudentOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>