salesforce-main/src/main/default/objects/Opportunity/fields/Client_Framework__c.field-meta.xml
<CustomField>
    <fullName>Client_Framework__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Client Framework</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Off Course</fullName>
            </value>
            <value>
                <fullName>Part of a Programme</fullName>
            </value>
            <value>
                <fullName>Client Framework Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>