salesforce-main/src/main/default/objects/Opportunity/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <description>The city of the company address provided by the student</description>
    <label>Company City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>