salesforce-main/src/main/default/objects/Opportunity/fields/Company_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Company_Street_1__c</fullName>
    <description>The first line of the company address provided by the student</description>
    <label>Company Address Line 1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>