salesforce-main/src/main/default/objects/Opportunity/fields/Company_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Company_Street_2__c</fullName>
    <description>The second line of the company address provided by the student</description>
    <label>Company Address Line 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>