salesforce-main/src/main/default/objects/Opportunity/fields/Company_Street_3__c.field-meta.xml
<CustomField>
    <fullName>Company_Street_3__c</fullName>
    <description>The third line of the company address provided by the student</description>
    <label>Company Address Line 3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>