salesforce-main/src/main/default/objects/Opportunity/fields/Company_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip_Postal_Code__c</fullName>
    <description>The zip/postal code of the company address provided by the student</description>
    <label>Company Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>