salesforce-main/src/main/default/objects/Opportunity/fields/Confirmation_of_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_Contact_Details__c</fullName>
    <label>Confirmation of Contact Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registration_Documents</valueSetName>
    </valueSet>
</CustomField>