salesforce-main/src/main/default/objects/Opportunity/fields/Corporate_Booking__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PE Bookings</relationshipLabel>
    <relationshipName>PE_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>