salesforce-main/src/main/default/objects/Opportunity/fields/Course_Instance__c.field-meta.xml
<CustomField>
    <fullName>Course_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates which course instance this student has an interest or application regarding.  Required for application.  Will override Start Date, Mode, Location, and Programme on opportunity when populated.</description>
    <inlineHelpText>Will override Start Date, Mode, Location, and Programme on opportunity with those on course instance when populated.</inlineHelpText>
    <label>Course Instance</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>