salesforce-main/src/main/default/objects/Opportunity/fields/Credit_Points__c.field-meta.xml
<CustomField>
    <fullName>Credit_Points__c</fullName>
    <label>Credit Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>