salesforce-main/src/main/default/objects/Opportunity/fields/Current_Pupillage_Training_Contract__c.field-meta.xml
<CustomField>
    <fullName>Current_Pupillage_Training_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do You Currently Have A Pupillage/Training Contract?</description>
    <label>Current Pupillage/Training Contract?</label>
    <type>Checkbox</type>
</CustomField>