salesforce-main/src/main/default/objects/Opportunity/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SLC</fullName>
            </value>
            <value>
                <fullName>SELFFUND</fullName>
            </value>
            <value>
                <fullName>ONLINE</fullName>
            </value>
            <value>
                <fullName>INTSTUDENT</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>