salesforce-main/src/main/default/objects/Opportunity/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <description>Displays the calculated cycle. If the student cycle is &quot;No Further Action&quot; this will always read &quot;No Further Action&quot;.
If opportunity cycle override is set to &quot;Use Student Cycle&quot;, then this field will display the student cycle; otherwise it will display the value within &quot;Cycle Override&quot;.</description>
    <formula>IF(TEXT(Account.Student_Cycle__c) = &quot;No Further Action&quot;, &quot;No Further Action&quot;,
  IF(TEXT( Cycle_Override__c ) = &quot;Use Student Cycle&quot;, 
    TEXT( Account.Student_Cycle__c ),
    TEXT( Cycle_Override__c ))
)</formula>
    <label>Cycle</label>
    <type>Text</type>
</CustomField>