salesforce-main/src/main/default/objects/Opportunity/fields/Cycle_Override__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Override__c</fullName>
    <description>Cycle override is used to set the cycle for the opportunity if it differs from the student.  By default it will select &quot;Use Student Cycle&quot;.</description>
    <label>Cycle Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Use Student Cycle</fullName>
                <default>true</default>
                <label>Use Student Cycle</label>
            </value>
            <value>
                <fullName>Pursue</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>No Further Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>