salesforce-main/src/main/default/objects/Opportunity/fields/Days_In_Current_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Current_Sub_Status__c</fullName>
    <description>The number of days since either the status or sub-status was changed</description>
    <formula>TODAY() - BLANKVALUE(Last_Status_Change_Date__c, TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days since either the status or sub-status was changed</inlineHelpText>
    <label>Days In Current Sub-Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>