salesforce-main/src/main/default/objects/Opportunity/fields/Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Decline_Date__c</fullName>
    <description>Date student has declined an opportunity.  This is automatically populated by Salesforce workflow rules.  Should not be populated via external systems.</description>
    <label>Decline Date</label>
    <type>Date</type>
</CustomField>