salesforce-main/src/main/default/objects/Opportunity/fields/Degree_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Degree_Certificate__c</fullName>
    <label>Degree Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registration_Documents</valueSetName>
    </valueSet>
</CustomField>