salesforce-main/src/main/default/objects/Opportunity/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit</label>
    <type>Date</type>
</CustomField>