salesforce-main/src/main/default/objects/Opportunity/fields/Desired_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Start_Date__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Desired Start Date</label>
    <type>Date</type>
</CustomField>