salesforce-main/src/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As of Contract</fullName>
            </value>
            <value>
                <fullName>Only for this Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>