salesforce-main/src/main/default/objects/Opportunity/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>Value of discount that is applied to the opportunity</description>
    <label>Discount Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>