salesforce-main/src/main/default/objects/Opportunity/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Discount %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>