salesforce-main/src/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>A list of divisions for NatWest Group PCDP England</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chief Audit Office</fullName>
            </value>
            <value>
                <fullName>Commercial &amp; Institutional Non Ring Fenced Bank</fullName>
            </value>
            <value>
                <fullName>Commercial &amp; Institutional Ring Fenced Bank</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Group Chief of Staff Office</fullName>
            </value>
            <value>
                <fullName>Leadership Hub</fullName>
            </value>
            <value>
                <fullName>Legal, Governance &amp; Regulatory Affairs</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>NatWest Digital X</fullName>
            </value>
            <value>
                <fullName>People and Transformation</fullName>
            </value>
            <value>
                <fullName>Private Banking</fullName>
            </value>
            <value>
                <fullName>Retail Banking</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Strategy, Corporate Development and Sustainability</fullName>
            </value>
            <value>
                <fullName>Ulster Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>