salesforce-main/src/main/default/objects/Opportunity/fields/eCommerce_Basket_Status__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Basket_Status__c</fullName>
    <label>eCommerce Basket Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User created web basket</fullName>
            </value>
            <value>
                <fullName>User abandoned basket</fullName>
            </value>
            <value>
                <fullName>User purchases web basket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>