salesforce-main/src/main/default/objects/Opportunity/fields/Education_Choice_1__c.field-meta.xml
<CustomField>
    <fullName>Education_Choice_1__c</fullName>
    <description>Student&apos;s choice of educational instution.  Typically populated by data processes.</description>
    <label>Education Choice 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberystwyth University</fullName>
            </value>
            <value>
                <fullName>Anglia Ruskin University</fullName>
            </value>
            <value>
                <fullName>Aston University</fullName>
            </value>
            <value>
                <fullName>Birmingham City University</fullName>
            </value>
            <value>
                <fullName>Bournemouth University</fullName>
            </value>
            <value>
                <fullName>BPP</fullName>
            </value>
            <value>
                <fullName>Bradford University</fullName>
            </value>
            <value>
                <fullName>Brighton</fullName>
            </value>
            <value>
                <fullName>Brunel</fullName>
            </value>
            <value>
                <fullName>Buckinghamshire New University</fullName>
            </value>
            <value>
                <fullName>Cardiff University/Law School</fullName>
            </value>
            <value>
                <fullName>Central Lancashire</fullName>
            </value>
            <value>
                <fullName>City University/The City Law School</fullName>
            </value>
            <value>
                <fullName>CLT Central Law Training</fullName>
            </value>
            <value>
                <fullName>College of Law</fullName>
            </value>
            <value>
                <fullName>De Montfort University</fullName>
            </value>
            <value>
                <fullName>East Anglia</fullName>
            </value>
            <value>
                <fullName>Glamorgan University</fullName>
            </value>
            <value>
                <fullName>Hertfordshire</fullName>
            </value>
            <value>
                <fullName>Huddersfield</fullName>
            </value>
            <value>
                <fullName>Kaplan Law School</fullName>
            </value>
            <value>
                <fullName>Keele</fullName>
            </value>
            <value>
                <fullName>Kingston University</fullName>
            </value>
            <value>
                <fullName>Leeds Metropolitan</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>London Metropolitan</fullName>
            </value>
            <value>
                <fullName>London South Bank University</fullName>
            </value>
            <value>
                <fullName>Manchester Metropolitan University</fullName>
            </value>
            <value>
                <fullName>Middlesex University</fullName>
            </value>
            <value>
                <fullName>Northumbria University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>